// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification component does not update cookie when there are no notifications 1`] = `
<div
  className="notification-none"
>
  <p
    tabIndex="0"
  >
    That's all for now
  </p>
</div>
`;

exports[`Notification component handles click on exit button and updates state and cookie 1`] = `
<div
  className="notification-wrapper"
>
  <div
    className="notification-banner"
  >
    <div
      className="notification-header"
    >
      <h1
        tabIndex="0"
      >
        Title1
      </h1>
      <button
        className="notification-exit-button"
        onClick={[Function]}
      >
        x
      </button>
    </div>
    <p
      tabIndex="0"
    >
      Notification1
    </p>
  </div>
  <div
    className="notification-banner"
  >
    <div
      className="notification-header"
    >
      <h1
        tabIndex="0"
      >
        Title2
      </h1>
      <button
        className="notification-exit-button"
        onClick={[Function]}
      >
        x
      </button>
    </div>
    <p
      tabIndex="0"
    >
      Notification2
    </p>
  </div>
</div>
`;

exports[`Notification component handles click on exit button and updates state and cookie 2`] = `
<div
  className="notification-wrapper"
>
  <div
    className="notification-banner"
  >
    <div
      className="notification-header"
    >
      <h1
        tabIndex="0"
      >
        Title2
      </h1>
      <button
        className="notification-exit-button"
        onClick={[Function]}
      >
        x
      </button>
    </div>
    <p
      tabIndex="0"
    >
      Notification2
    </p>
  </div>
</div>
`;

exports[`Notification component hides the notification on exit button click 1`] = `
<div
  className="notification-wrapper"
>
  <div
    className="notification-banner"
  >
    <div
      className="notification-header"
    >
      <h1
        tabIndex="0"
      >
        Test Title
      </h1>
      <button
        className="notification-exit-button"
        onClick={[Function]}
      >
        x
      </button>
    </div>
    <p
      tabIndex="0"
    >
      Test Notification
    </p>
  </div>
</div>
`;

exports[`Notification component hides the notification on exit button click 2`] = `
<div
  className="notification-none"
>
  <p
    tabIndex="0"
  >
    That's all for now
  </p>
</div>
`;

exports[`Notification component loads notifications from cookies on mount 1`] = `
<div
  className="notification-wrapper"
>
  <div
    className="notification-banner"
  >
    <div
      className="notification-header"
    >
      <h1
        tabIndex="0"
      >
        Test Title
      </h1>
      <button
        className="notification-exit-button"
        onClick={[Function]}
      >
        x
      </button>
    </div>
    <p
      tabIndex="0"
    >
      Test Notification
    </p>
  </div>
</div>
`;

exports[`Notification component renders nothing when document.cookie is null 1`] = `
<div
  className="notification-none"
>
  <p
    tabIndex="0"
  >
    That's all for now
  </p>
</div>
`;

exports[`Notification component renders null when there are no notifications but document.cookie is not null 1`] = `
<div
  className="notification-none"
>
  <p
    tabIndex="0"
  >
    That's all for now
  </p>
</div>
`;

exports[`Notification component renders without crashing 1`] = `
<div
  className="notification-none"
>
  <p
    tabIndex="0"
  >
    That's all for now
  </p>
</div>
`;
